# Chimera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
include/core/: EspHal.h  commandline.h  serial_manager.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
main/core/: commandline.c  serial_manager.c
